--- a/04 Image Noise Reduction.ipynb
+++ b/04 Image Noise Reduction.ipynb
@@ -22,7 +22,8 @@
     "\n",
     "from tensorflow.keras.datasets import mnist\n",
     "from matplotlib import pyplot as plt\n",
-    "from tensorflow.keras.models import Sequential, Model\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.layers import Dense, Input\n",
     "from tensorflow.keras.callbacks import EarlyStopping, LambdaCallback\n",
     "from tensorflow.keras.utils import to_categorical\n",
